--- a/calculator.css
+++ b/calculator.css
@@ -3,4 +3,13 @@ body {
   padding-right: 30px;
   padding-bottom: 50px;
   padding-left: 50px;
+  font-family: "Arial", Helvetica, sans-serif;
+}
+
+.paylabel {
+  font-size: 32px;
+}
+
+.resultlabel {
+  font-size: 32px;
 }
